<resources>
    <string name="single_hotel_full_name">深圳深航国际酒店</string>
    <string name="single_hotel_address">中国广东省深圳市深南大道6033号金运世纪大厦6G-H</string>
    <string name="single_hotel_address_simple">中国广东省深圳市深南大道6033号</string>
    <string name="single_hotel_phone">075582835988</string>
    <string name="app_name">标准酒店</string>
    <string name="test_card_number">9900003673</string>
    <string name="test_user_name">白百何</string>
    <string name="tab_home">首页</string>
    <string name="tab_works">作品</string>
    <string name="tab_order">订单</string>
    <string name="tab_me">我的</string>
    <string name="tab_more">更多</string>
    <string name="home_left_name">我负责的</string>
    <string name="home_middle_name">我发起的</string>
    <string name="home_right_name">我关注的</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="fast_register">立即注册</string>
    <string name="other_login">其他登录方式</string>
    <string name="input_telephone_init">邮箱，如：abc@163.com</string>
    <string name="password_init">密码</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="loading">正在加载</string>
    <string name="dialog_info_save_works">正在保存作品</string>
    <string name="loading_template">正在加载模板数据</string>
    <string name="one_spot">.</string>
    <string name="two_spot">..</string>
    <string name="three_spot">&#8230;</string>
    <string name="title_alert">提示信息</string>
    <string name="saving_works">正在保存作品</string>
    <string name="select_the_provinces">请选择省市区</string>
    <string name="down_state">正在下载：%s</string>
    <string name="download_over">下载完成</string>
    <string name="file_download_over">文件已下载完毕</string>
    <string name="download_title">正在下载%s</string>
    <string name="ready_download">准备下载</string>
    <string name="is_the_latest_version">已是最新版本</string>
    <string name="no_immediate_update">发现有新版本是否立即更新</string>
    <string name="check_for_updates">检查更新</string>
    <string name="later_on">稍后再说</string>
    <string name="now_updates">马上升级</string>
    <string name="load_msg">呃,页面加载失败</string>
    <string name="load_retry">重试</string>
    <string name="no_data">暂无数据</string>
    <string name="no_net">网络根本没连，赶紧检查</string>
    <string name="mini_one">亲，数量至少为1哦~</string>
    <string name="tip_double_click_exit">再次点击退出</string>
    <string name="you_no_login">您没有登录，请登录后在操作</string>
    <string name="prompt_message">提示</string>
    <string name="now_login">马上登录</string>
    <string name="hint_remain_count">您还可以输入%s字</string>
    <string name="hint_max_length_msg">最多只能输入%s字</string>
    <string name="network_name_add">当前网络名称：</string>
    <string name="amap">高德地图</string>
    <string name="booking_hotel">预订酒店</string>
    <string name="start_date">入住时间</string>
    <string name="end_date">离店时间</string>
    <string name="card_number">会员卡号</string>
    <string name="user_type">类型</string>
    <string name="my_booking">我的订单</string>
    <string name="my_consumption_points">我的积分</string>
    <string name="revise_my_data">修改资料</string>
    <string name="revise_password">修改密码</string>
    <string name="me">我的账户</string>
    <string name="setting">更多信息</string>
    <string name="corporate_discount_code">企业优惠代码</string>
    <string name="input_optional_fill">（可选）</string>
    <string name="booking_one_night">预订%s晚，继续 ></string>
    <string name="query_again">重新查询</string>
    <string name="hotel_info">酒店信息</string>
    <string name="choice">选择</string>
    <string name="booking">预订</string>
    <string name="room_introduce">房型介绍</string>
    <string name="room_rate_details">房价详情</string>
    <string name="room_details">客房详情</string>
    <string name="user_login">会员登录</string>
    <string name="phone_or_email_card">手机/卡号/邮箱</string>
    <string name="add_user">加入会员</string>
    <string name="user_courtesy">会员礼遇</string>
    <string name="know_club">了解鹏尊会</string>
    <string name="full_name">姓名</string>
    <string name="call">称呼</string>
    <string name="man">先生</string>
    <string name="woman">女士</string>
    <string name="phone">手机</string>
    <string name="phone_num">手机号</string>
    <string name="code">验证码</string>
    <string name="email">邮箱</string>
    <string name="agreed_terms_and_conditions">同意条款和条件</string>
    <string name="join_user">加入</string>
    <string name="title">标题</string>
    <string name="see_more">查看更多</string>
    <string name="show_less">显示更少</string>
    <string name="get_code">获取</string>
    <string name="read_text">请同意阅读条款和条件</string>
    <string name="treaty">用户协议</string>
    <string name="reset_password_one">输入手机号（1/3）</string>
    <string name="reset_password_two">验证手机号（2/3）</string>
    <string name="reset_password_three">设置新密码（3/3）</string>
    <string name="next_step_verify_phone_num">下一步，验证手机号</string>
    <string name="next_step_reset_password">下一步，设置新密码</string>
    <string name="sms_verification_code_sent_to">短信验证码已发送到</string>
    <string name="complete">完成</string>
    <string name="new_password">新密码</string>
    <string name="raw_password">原始密码</string>
    <string name="again_new_password">确定新密码</string>
    <string name="please_input_email_null">请输入电子邮箱!</string>
    <string name="please_input_email_again">电子邮箱格式错误，请从新输入!</string>
    <string name="please_input_name_null">请输入名字!</string>
    <string name="please_input_phone_null">请输入手机号码!</string>
    <string name="please_input_phone_again">手机号码格式错误，请从新输入!</string>
    <string name="please_input_code_null">请输入验证码!</string>
    <string name="please_input_new_password_null">请输入新密码!</string>
    <string name="please_input_password_null">请输入密码!</string>
    <string name="close">关闭</string>
    <string name="convertible">可兑换</string>
    <string name="consumption_points">积分</string>
    <string name="logout">退出登录</string>
    <string name="save_changes">保存更改</string>
    <string name="company_introduction">公司介绍</string>
    <string name="brand_introduction">品牌介绍</string>
    <string name="win_win_cooperation">合作共赢</string>
    <string name="contact_us">联系我们</string>
    <string name="version_info">当前版本</string>
    <string name="no_checke">未入住</string>
    <string name="checked">已入住</string>
    <string name="canceled">已取消</string>
    <string name="no_order_info">当前暂无订单信息~</string>
    <string name="me_to_booking">我要预订</string>
    <string name="goto_home">返回首页 </string>
    <string name="yuan">元</string>
    <string name="no_pay">未支付</string>
    <string name="cancelled">已取消</string>
    <string name="paymented">已支付</string>
    <string name="no_more">没有更多</string>
    <string name="click_to_load_more">点击加载更多</string>
    <string name="available_consumption_points">可使用积分</string>
    <string name="points">分</string>
    <string name="no_checke_order">未入住订单</string>
    <string name="checked_order">已入住订单</string>
    <string name="canceled_order">已取消订单</string>
    <string name="order_id">订单号码</string>
    <string name="fill_order">填写订单</string>
    <string name="room_type_and_num">客房类型及数量</string>
    <string name="check_in_info">入住信息</string>
    <string name="other_demands">其他要求</string>
    <string name="nothing">无。</string>
    <string name="price_details">价格明细</string>
    <string name="total_charge">总计</string>
    <string name="taxation_charge">税费</string>
    <string name="reminder">温馨提示</string>
    <string name="test_reminder">请于14:00点后办理入住,如果提前到店,视酒店情况确定。\n视客情况可以免费延迟至14:00退房。\n如果您已经支付预付款,我们将扣留全部款项。</string>
    <string name="goto_buy">去支付</string>
    <string name="cancel_order">取消订单</string>
    <string name="confirm_cancel_order">您确定要取消订单吗？</string>
    <string name="go_back">返回</string>
    <string name="order_pay">订单支付</string>
    <string name="see_price_details">查看价格明细</string>
    <string name="see_reminder">查看温馨提示</string>
    <string name="save_and_next_auto_fill">保存，下次自动填写</string>
    <string name="save_often_person">保存到常用入住人</string>
    <string name="booked_person_info">预订人信息</string>
    <string name="booked_person_info_optional">预订人信息(可选)</string>
    <string name="check_in_person_info">入住人信息</string>
    <string name="other_demands_optional">其他要求(可选)</string>
    <string name="submit_order">提交订单</string>
    <string name="hint_booked_person_info">预订人是指代他人预订酒店的人，如果您是预订人请填写预订人信息。</string>
    <string name="hint_check_in_info">您还没有填入住人信息。</string>
    <string name="fill_other_demands">填写其他要求</string>
    <string name="revise_room_num">更改客房数量</string>
    <string name="room_num">客房数量</string>
    <string name="choice_often_person">选择常用入住人</string>
    <string name="phone_prompt">请输入有效的手机号</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_wait">支付结果确认中</string>
    <string name="pay_failure">支付失败</string>
    <string name="wechat_inpaysupported">没有微信或者微信版本不支持支付功能</string>
    <string name="server_failure">服务器请求错误</string>
    <string name="you_order_pay_success">您的订单已支付成功</string>
    <string name="order_submit_ok">您的订单已提交成功</string>
    <string name="order_id_add">订单号码:</string>
    <string name="order_total_add">应付总额:</string>
    <string name="order_prompt_message">建议您继续完成在线支付，房间将整晚为您保留。您也可以选择到店支付，则房间为您保留到入住当晚18:00。</string>
    <string name="ali_pay">支付宝</string>
    <string name="wechat_pay">微信</string>
    <string name="reception_pay">前台支付</string>
    <string name="see_order">查看订单</string>
    <string name="order_success_prompt_message">您已经完成付款，房间将整晚为您保留。如果有其他问题，请联系我们客服电话400-800-8888。</string>
    <string name="start_point">起点</string>
    <string name="end_point">终点:</string>
    <string name="go_to">前往</string>
    <string name="my_location">我的位置</string>
    <string name="drive_car">驾车</string>
    <string name="walk">步行</string>
    <string name="bus">公交</string>
    <string name="no_result">没有结果</string>
    <string name="qq">QQ</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信</string>
    <string name="wxcircle">微信朋友圈</string>
    <string name="app_id">58eedde4</string>
    <string name="spot">•</string>

</resources>
