<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/hint_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/sms_verification_code_sent_to"
        android:textColor="@color/text_color_black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/code"
        android:textColor="@color/text_color_gray_a"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/code_ll"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input_bg"
            android:cursorVisible="true"
            android:gravity="center_vertical"
            android:inputType="text"
            android:paddingRight="35dp"
            android:textColor="@color/input_text_color"
            android:textColorHint="@color/main_text_dark"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/code_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@mipmap/input_delete" />
    </RelativeLayout>

    <TextView
        android:id="@+id/next_step_reset_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="33dp"
        android:background="@color/calendar_selected_range_bg"
        android:gravity="center"
        android:text="@string/next_step_reset_password"
        android:textColor="@color/white"
        android:textSize="17sp" />


</LinearLayout>
