<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fill_order_other_demands_info_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="18dp"
    android:paddingTop="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/other_demands_optional"
        android:textColor="@color/order_text_color_b"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="11dp">

        <TextView
            android:id="@+id/other_demands"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|top"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/nothing"
            android:textColor="@color/order_text_color_c"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="@dimen/edit_more_width"
            android:layout_height="@dimen/edit_more_width"
            android:layout_marginLeft="46dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_pen" />

    </LinearLayout>

</LinearLayout>
