<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reminder_details_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="28dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reminder"
            android:textColor="@color/order_text_color_c"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|top"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/test_reminder"
                android:textColor="@color/order_text_color_b"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/more_width"
        android:layout_height="@dimen/more_width"
        android:layout_marginLeft="50dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/more" />
</LinearLayout>
