<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.nettactic.hotelbooking.activity.PaySuccessActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/main_margin"
            android:layout_marginRight="@dimen/main_margin"
            android:orientation="vertical"
            android:paddingBottom="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="29dp"
                android:paddingTop="32dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/you_order_pay_success"
                    android:textColor="@color/order_text_color_j"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="@string/order_id_add"
                        android:textColor="@color/order_text_color_c"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/order_id_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_id_add"
                        android:textColor="@color/order_text_color_c"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="13dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="@string/order_total_add"
                        android:textColor="@color/order_text_color_c"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/order_total_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_total_add"
                        android:textColor="@color/order_text_color_c"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/view_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|top"
                android:lineSpacingMultiplier="1.5"
                android:paddingBottom="32dp"
                android:paddingTop="32dp"
                android:text="@string/order_success_prompt_message"
                android:textColor="@color/order_text_color_c"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/see_order"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@color/calendar_selected_range_bg"
                android:gravity="center"
                android:text="@string/see_order"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
